# twilio2

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  lefthook.yml
.github/workflows/: ci.yml
examples/: messages_builder.rs  messaging_services.rs
examples/support/: mod.rs
src/: a2p.rs  blocking_client.rs  channel_senders.rs  client.rs  common.rs  content.rs  deactivations.rs  diagnostics.rs  lib.rs  link_shortening.rs  messages.rs  messaging.rs  messaging_features.rs  pricing.rs  secret.rs  services.rs  short_codes.rs  tollfree_verifications.rs  typing_indicators.rs
tests/: api.rs  content_api.rs  sensitive_diagnostics.rs  sync_api.rs  tracing_client.rs
tests/support/: mod.rs
