[package]
name = "twilio2"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "A small reqwest client for Twilio Programmable Messaging APIs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/idknerdyshit/twilio2"
readme = "README.md"
exclude = [
    "/.github/**",
    "/.DS_Store",
    "/lefthook.yml",
]
keywords = ["twilio", "sms", "messaging"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
rustls-no-provider = ["reqwest/rustls-no-provider"]
sensitive-diagnostics = ["dep:bytes", "dep:http"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["form"] }
async-stream = "0.3"
bytes = { version = "1", optional = true }
futures-core = "0.3"
http = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["time"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs"] }
rustls = "0.23"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.26"
tracing-subscriber = "0.3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
pedantic = { level = "deny", priority = -1 }
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
